# backend-server

./: .gitignore  .gitmodules  ARCHITECTURE_REVIEW.md  CMakeLists.txt  CONTRIBUTING.md  README.md  fuguang-server.sln  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: CONFIG_REFERENCE.md  HARDWARE_SETUP.md  PROTOCOL.md
docs/adr/: 001-multi-repo-split.md  002-remove-qt-from-algo.md  003-submodule-vs-subtree.md  004-pugixml-over-qdomdocument.md  005-standalone-asio.md  006-cpp20-upgrade.md  007-adaptive-image-transport.md
include/DVP2/: DVPCamera.h  dvpParam.h  dvpir.h
include/MVS/: CameraParams.h  MvCameraControl.h  MvErrorDefine.h  MvObsoleteInterfaces.h
include/modbus/: modbus-version.h  modbus.h
lib/Release/: basic_algorithm.lib  modbus.lib
src/auto_focus/: CMakeLists.txt  auto_focus.vcxproj  auto_focus.vcxproj.filters  auto_focus2.cpp  auto_focus2.h  auto_focus_global.h  thread_calc_image_clarity.cpp  thread_calc_image_clarity.h
src/common/: CMakeLists.txt  common.cpp  common.h  common.vcxproj  common.vcxproj.filters  common_api.cpp  common_api.h  image_shared_memory.cpp  image_shared_memory.h
src/device_camera/: CMakeLists.txt  camera_dvp2.cpp  camera_dvp2.h  camera_factory.cpp  camera_factory.h  camera_mvs.cpp  camera_mvs.h  device_camera.vcxproj  device_camera.vcxproj.filters  device_camera_global.h  grab_worker.cpp  grab_worker.h  interface_camera.cpp  interface_camera.h
src/device_enum/: CMakeLists.txt  device_enum.h  device_enum.vcxproj  device_enum.vcxproj.filters  device_enum_dvp2.cpp  device_enum_dvp2.h  device_enum_factory.cpp  device_enum_factory.h  device_enum_global.h  device_enum_mvs.cpp  device_enum_mvs.h  device_info.hpp  device_info_dvp2.hpp  device_info_mvs.hpp
src/event_bus/: CMakeLists.txt  event_bus.cpp  event_bus.h  event_bus.vcxproj  event_bus.vcxproj.filters  event_bus_global.h  event_register.h  interface_event_bus.h
src/fiber_end_server/: CMakeLists.txt  camera_config_mgr.hpp  config.hpp  config.xml  device_manager.hpp  fiber_end_server.vcxproj  fiber_end_server.vcxproj.filters  main.cpp  server.cpp  server.h  thread_algorithm.cpp  thread_algorithm.h  thread_device_enum.cpp  thread_device_enum.h  thread_misc.cpp  thread_misc.h  thread_motion_control.cpp  thread_motion_control.h  work_threads.cpp  work_threads.h
src/motion_control/: CMakeLists.txt  motion_control.cpp  motion_control.h  motion_control.vcxproj  motion_control.vcxproj.filters  motion_control_global.h  motion_control_plc.cpp  motion_control_plc.h  motion_control_port.cpp  motion_control_port.h
